K8s-deployment/resource-server/apiserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resource-server
  namespace: rs
  annotations:
    nginx.ingress.kubernetes.io/global-rate-limit: "1000"
    nginx.ingress.kubernetes.io/global-rate-limit-key: $server_name
    nginx.ingress.kubernetes.io/global-rate-limit-window: 1s
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    nginx.ingress.kubernetes.io/limit-connections: "100"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/server-snippet: |
       add_header Clear-Site-Data   "*" always;
       add_header Referrer-Policy   "no-referrer-when-downgrade" always;
       add_header X-Frame-Options   "deny" always;
       add_header X-XSS-Protection  "1; mode=block" always;
       add_header X-Permitted-Cross-Domain-Policies  "none" always;
       add_header Cross-Origin-Embedder-Policy "require-corp" always;
       add_header Cross-Origin-Resource-Policy "cross-origin" always;
         


spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: rs-api-server
                port:
                  name: http
      host: rs.iudx.org.in
  tls:
    - hosts:
        - rs.iudx.org.in
      secretName: rs-tls-secret
